--- a/catalogue.html
+++ b/catalogue.html
@@ -3,47 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Es FÜGT sich — Catalogue</title>
+  <title>Es FÜGT sich</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
   <!-- model-viewer for interactive GLB/GLTF (very lightweight) -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
   <header class="header">
-    <h1>Es FÜGT sich — Catalogue</h1>
+    <h1>Es FÜGT sich</h1>
     <nav><a href="index.html">← Back</a></nav>
   </header>
-
-  <section class="grid">
-    <!-- Replace src= with your Rhino-exported .glb files in /models -->
-    <article class="card">
-      <model-viewer class="model" src="models/joint1.glb" camera-controls auto-rotate ar></model-viewer>
-      <h3>Connection 01</h3>
-      <p>Describe the joint: geometry, fasteners, assembly steps, reuse logic.</p>
-    </article>
-
-    <article class="card">
-      <model-viewer class="model" src="models/joint2.glb" camera-controls auto-rotate ar></model-viewer>
-      <h3>Connection 02</h3>
-      <p>Describe the joint briefly.</p>
-    </article>
-
-    <article class="card">
-      <model-viewer class="model" src="models/joint3.glb" camera-controls auto-rotate ar></model-viewer>
-      <h3>Connection 03</h3>
-      <p>Describe the joint briefly.</p>
-    </article>
-
-    <article class="card">
-      <model-viewer class="model" src="models/joint4.glb" camera-controls auto-rotate ar></model-viewer>
-      <h3>Connection 04</h3>
-      <p>Describe the joint briefly.</p>
-    </article>
-  </section>
-
   <footer class="footer">
     <small>© 2025 Es FÜGT sich</small>
   </footer>
