--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Typewriter-style font -->
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="landing" id="landing">
-      <h1 class="typewriter" id="title">Es FÜGT sich</h1>
+      <h1 class="title" id="title">Es FÜGT sich</h1>
+      <p class="subtitle">Adaptable joints for structural concrete reuse</p>
       <!-- Abstract incoming elements (replace later with 3D if desired) -->
       <div id="wall-bottom" class="element wall from-bottom" aria-hidden="true"></div>
       <div id="slab-right" class="element slab from-right" aria-hidden="true"></div>
